word2vec -> word-embedding

--- a/Code/Etude indicateur Camme/graphiques rapport.Rmd
+++ b/Code/Etude indicateur Camme/graphiques rapport.Rmd
@@ -3,8 +3,7 @@ title: "Untitled"
 author: "Kim Antunez et Alain Quartier-la-Tente"
 date: "5/12/2020"
 output: 
-    pdf_document:
-        keep_tex: yes
+    pdf_document
 themeoptions: "coding=utf8,language=english"
 classoption: 'french'
 fontsize: 11pt
@@ -43,7 +42,7 @@ donnes_calcul <- scale(ts.intersect(modeles[,c(ind_retenu, "sncf")], data[,1:2])
 donnes_calcul_lag <- scale(ts.intersect(modeles[,c(ind_retenu, "sncf")], data_lag[,1:2]))
 colnames(donnes_calcul) <- 
     colnames(donnes_calcul_lag) <- 
-    c("Modèle word2vec","Modèle lexical",
+    c("Modèle word-embedding","Modèle lexical",
       "Indicateur synthétique Camme (Brut)", "Indicateur synthétique Camme (CVS)"
     )
 
@@ -157,7 +156,7 @@ graph_cvs <- function(data, titre = NULL, sous_titre = NULL, legende = NULL, aff
 ```{r graphSentiments,fig.cap="test"}
 data_g <- donnes_calcul_lag[,c(3,1,2)]
 colnames(data_g) <-  c("Indicateur synthétique Camme (Brut) retardé",
-                       "Modèle word2vec","Modèle lexical")
+                       "Modèle word-embedding","Modèle lexical")
 graph_glob(data_g)   +
     scale_colour_manual(breaks = colnames(data_g),
                         values = c("#D8766D", "#4B0055", "#7ED357"))+
@@ -173,7 +172,7 @@ cvs_camme <- graph_cvs(donnes_calcul[,3:4]) +
     coord_cartesian(y = c(-2.5,2.5))
 cvs_w2vec_ts <- get_indicators(jx13(donnes_calcul[,1]),"y","sa")
 cvs_w2vec_ts <- ts.union(cvs_w2vec_ts[[1]], cvs_w2vec_ts[[2]])
-colnames(cvs_w2vec_ts) <- paste("Modèle word2vec",c("(Brut)","(CVS)"))
+colnames(cvs_w2vec_ts) <- paste("Modèle word-embedding",c("(Brut)","(CVS)"))
 cvs_w2vec <- graph_cvs(cvs_w2vec_ts)  +
     coord_cartesian(y = c(-2.5,2.5))
 
@@ -239,7 +238,7 @@ graph_coefcvs <- function(data, titre = NULL, sous_titre = NULL, legende = NULL,
 }
 coef_sais <- ts.union(get_indicators(jx13(donnes_calcul[,1]),"s")[[1]],
                       get_indicators(jx13(donnes_calcul[,2]),"s")[[1]])
-colnames(coef_sais) <- c("Modèle word2vec", "Modèle lexical")
+colnames(coef_sais) <- c("Modèle word-embedding", "Modèle lexical")
 graph_coefcvs(coef_sais,n_xlabel = 4,x_lab = "Dates") +
   geom_hline(yintercept = 0,linetype = "dotted") +
   facet_wrap(~periode,nrow=1)  +
